{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Ground",
            "id": "cb003142-d357-4d92-856f-72d887e150da",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "64fdc050-7243-4c51-9e7e-3028933f40c9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "357c1591-cac3-462d-baf8-2a4f2c4463b1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "dd943b1a-4931-43a3-911b-1981f5e9ff1c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Value",
                    "id": "96d993d7-9e43-420f-8e20-456704531b8c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Value",
                    "id": "dc429925-c20b-4659-b4aa-3f007ed804a8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeOrb",
                    "type": "Button",
                    "id": "d01bd2e2-40ad-450f-b645-d47920863bac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeOrbWeigth",
                    "type": "Button",
                    "id": "aeb18c4c-ca44-4445-9793-0a3ddfc99cc8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Change Weight",
                    "type": "Button",
                    "id": "95a600fb-d012-48af-b59f-6a09ac4203c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeOrbDirectly",
                    "type": "Button",
                    "id": "868e7e54-a3a6-401c-86b0-89329529ce91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Value",
                    "id": "02dc86d5-4014-4281-ab86-e0a827192550",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PauseMenu",
                    "type": "Button",
                    "id": "d0ff34dc-7993-4162-ad55-896f7939365e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b92681bb-6d76-413f-ac6a-fefccf476e06",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),ScaleVector2(x=0.05,y=0.05)",
                    "groups": "KeyboardMouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f6f3105-6aac-4a2e-990d-611f3275a7f3",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),ScaleVector2(x=1.5,y=1.5)",
                    "groups": "Controller",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13aa705c-51ca-44a1-8a90-5d5dc81209c8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6347c67e-e471-41ef-928d-105c1ac5ae99",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cef5dd30-f992-4e88-9a5c-284dba28bfb5",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83dc9038-51e8-4fe2-a136-9fe4b24f551c",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3300e6d-43c9-4990-91af-26d8391d226a",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e41e8e4-dda4-4a62-91f1-def27b275eb0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0226e75c-372f-44dc-bb64-0d872bae81ba",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f29ae9d9-12ea-44f0-9765-6ba68dce65d8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "KeyboardMouse",
                    "action": "ChangeOrb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db0fe492-c3ca-4398-b852-44ca5aa1086d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "KeyboardMouse",
                    "action": "ChangeOrb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57c5c9d7-6a12-4e91-9b62-e4bbfec3fa9f",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "Controller",
                    "action": "ChangeOrb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e7524da-c0d0-442c-a342-1383b4ebfbdf",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "Controller",
                    "action": "ChangeOrb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "392a246b-6430-4c33-800e-26a68cc78aed",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeOrbWeigth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "670f5c97-5066-404e-81f9-fd7ec30ac5b9",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "Change Weight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2132ce0d-d342-4dd7-878f-110530e72d62",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "",
                    "action": "Change Weight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e5a93b1-da20-4df8-893e-fc997f9e3704",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale(factor=0)",
                    "groups": "KeyboardMouse",
                    "action": "ChangeOrbDirectly",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f5c3663-7cbb-4200-bcbc-08f9280337e2",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "KeyboardMouse",
                    "action": "ChangeOrbDirectly",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe55d1d6-bc95-4666-ac55-49d11e626729",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "KeyboardMouse",
                    "action": "ChangeOrbDirectly",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "c1f3ea60-35ee-4bff-8572-971e4f488838",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "eacca528-500d-4922-8a01-532d86bcffb6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b2b06bee-afa6-4b59-babd-2af4f45ee9a6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a67639fb-7f5f-4d1b-beed-c1aee53fa5ac",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1d0ab378-327c-4460-a0e3-8063d0b02653",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "75781f06-ffe2-460b-9691-0f83d87365eb",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dec88de2-1554-4cc4-a59d-a959b242fe70",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aca12a2d-c181-42f6-90db-967f10268d7a",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f6e650c-fe7e-4df7-b32d-919c1bdc5741",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "744b16eb-4bc9-4b60-87dd-7db4d9347f79",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menus",
            "id": "e8cdb09b-39fc-47fe-a38f-da64a51d6057",
            "actions": [
                {
                    "name": "ResumeGame",
                    "type": "Button",
                    "id": "faca21b0-46f2-4610-8b78-e91e9fade7de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "63cd940b-8580-41ee-a15b-71d0683e1fa7",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ResumeGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b954a0b-1c85-4ba1-b953-5e4ea4e1c908",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ResumeGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}